k8s-config/svc-vault-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-external
  namespace: external-secrets
spec:
  type: ExternalName
  externalName: host.docker.internal
  ports:
    - port: 8200
