k8s-config/ingress-vault-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: vault-external
  namespace: external-secrets
spec:
  ingressClassName: traefik
  rules:
  - host: vault.localtest.me
    http:
      paths:
      - backend:
          service:
            name: vault-external
            port:
              number: 8200
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - vault.localtest.me
    secretName: tls-wildcard-localtest-me
